# Montaris-X

./: .gitignore  .gitlab-ci.yml  404.html  CLAUDE.md  LICENSE  README.md  assemble_gif.py  generate_demo_gif.py  index.html  main.py  pyproject.toml  requirements.txt  run.sh  sitemap.xml
.github/workflows/: deploy.yml  publish.yml  release.yml  tests.yml
assets/css/: styles.989ad72c.css
assets/js/: 1464a004.9d1250ad.js  1cf69b3d.178d41f3.js  28092509.cdfa6e5b.js  2cd3556e.fbeec478.js  2e33c804.c424bf39.js  4826bdfe.3a82d04e.js  54f44165.58dd39cc.js  588bd741.46f63bd0.js  5a31e25c.94d8f25a.js  6da1e4c7.4a6ee0f7.js  8e54e36b.244247fc.js  8eacc4a9.3fba6616.js  b5706c7f.f96ce8ee.js  c4f5d8e4.b356f75a.js  c588e026.2001f036.js  main.da79381f.js  runtime~main.194d23f9.js
docs/: 3d_roi_annotation_plan.md  keyboard-shortcuts.html  supported-formats.html  why-montaris-x.html
docs/getting-started/: installation.html  quick-start.html
docs/user-guide/: display-modes.html  drawing-tools.html  image-adjustments.html  import-export.html  layer-management.html  multi-channel.html  session-management.html  transform-move.html
montaris/: __init__.py  __main__.py  app.py  canvas.py  gpu_select.py  layers.py  theme.py
montaris/core/: accel.py  adjustments.py  busy.py  components.py  display_modes.py  event_logger.py  image_set.py  multi_undo.py  rle.py  roi_ops.py  roi_transform.py  selection.py  shaders.py  tile_cache.py  tile_pyramid.py  undo.py  workers.py
montaris/io/: image_io.py  imagej_roi.py  instructions.py  roi_io.py  session.py  volume_labels.py
montaris/tools/: __init__.py  base.py  brush.py  bucket_fill.py  circle.py  eraser.py  hand.py  move.py  polygon.py  rectangle.py  select.py  stamp.py  transform.py
montaris/widgets/: __init__.py  adjustments_panel.py  alert_modal.py  canvas_grid.py  debug_console.py  display_panel.py  help_modal.py  layer_panel.py  minimap.py  perf_monitor.py  properties_panel.py  toast.py  tool_panel.py  view_3d.py  z_stack_dialog.py
scripts/: assemble_gif.py  generate_demo_gif.py  headed_3d_smoke.py  headed_wand_demo.py  headed_zstack_modes.py  run_headed_zstack_modes.py  toast_screenshot.py
tasks/: todo.md
tests/: bench_all_tools_lag.py  bench_brush_eraser_lag.py  bench_cpu.py  bench_memory.py  bench_snapshot_memory.py  conftest.py  headed_3d_convert_perf.py  headed_3d_convert_to_labels.py  headed_3d_delete_dup_erase_perf.py  headed_3d_path_audit.py  headed_3d_perf.py  headed_3d_ui_perf.py  headed_3d_wand_perf.py  helpers.py  peak_memory_test.py  test_accel.py  test_accel_extended.py  test_adjustments.py  test_adjustments_display.py  test_alert_modal.py  test_app_comprehensive.py  test_app_helpers.py  test_auto_overlap.py  test_batch_export.py  test_boundary.py  test_brush_memory.py  test_bucket_fill.py  test_canvas_comprehensive.py  test_canvas_helpers.py  test_canvas_performance.py  test_circle.py  test_codex_review_fixes.py  test_color_picker_paths.py  test_debug_console_extended.py  test_dirty_edge_tile.py  test_display_modes.py  test_display_modes_extended.py  test_eraser_tool.py  test_event_logger.py  test_event_logger_extended.py  (+58 more)
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: keyboard-shortcuts.md  supported-formats.md  why-montaris-x.md
website/docs/getting-started/: installation.md  quick-start.md
website/docs/user-guide/: display-modes.md  drawing-tools.md  grid-canvas.md  image-adjustments.md  import-export.md  layer-management.md  multi-channel.md  session-management.md  transform-move.md
website/src/components/: FeedbackForm.js
website/src/css/: custom.css
website/src/pages/: index.js
