[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montaris-x"
dynamic = ["version"]
description = "Cross-platform ROI editor for scientific images"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "tifffile>=2023.7.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]
accel = [
    "numba>=0.58.0",
]

[project.scripts]
montaris = "montaris.app:main"

[tool.setuptools.dynamic]
version = {attr = "montaris.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
