[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "montaris-x"
dynamic = ["version"]
description = "Cross-platform desktop ROI editor for microscopy, histology, and fluorescence imaging"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Digin Dominic", email = "digin13dominic@gmail.com"},
]
keywords = [
    "roi",
    "microscopy",
    "histology",
    "fluorescence",
    "image-annotation",
    "delineation",
    "scientific-imaging",
    "brain-mapping",
    "pyside6",
    "desktop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Framework :: PySide6",
    "Natural Language :: English",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "tifffile>=2023.7.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]
accel = [
    "numba>=0.58.0",
]

[project.urls]
Homepage = "https://digindominic.me/Montaris-X/"
Documentation = "https://digindominic.me/Montaris-X/docs/getting-started/installation"
Repository = "https://github.com/digin1/Montaris-X"
"Bug Tracker" = "https://github.com/digin1/Montaris-X/issues"
Changelog = "https://github.com/digin1/Montaris-X/releases"
"Download Executables" = "https://github.com/digin1/Montaris-X/releases/latest"

[project.scripts]
montaris = "montaris.app:main"

[tool.setuptools.packages.find]
include = ["montaris*"]

[tool.setuptools.package-data]
montaris = ["assets/*"]

[tool.setuptools.dynamic]
version = {attr = "montaris.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
